<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1745" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8255" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05882" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1235" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3306" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4208" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.511" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6012" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6914" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8118" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90956" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_hA"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v8"
        app:layout_constraintStart_toStartOf="@+id/guideline_v7"
        app:layout_constraintTop_toTopOf="@+id/guideline_h12"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="24dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v6"
        app:layout_constraintStart_toStartOf="@+id/guideline_v6"
        app:layout_constraintTop_toTopOf="@+id/guideline_h11" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h14"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v6"
        app:layout_constraintStart_toStartOf="@+id/guideline_v7"
        app:layout_constraintTop_toTopOf="@+id/guideline_h13" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h14"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v8"
        app:layout_constraintStart_toStartOf="@+id/guideline_v6"
        app:layout_constraintTop_toTopOf="@+id/guideline_h13" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h15"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v8"
        app:layout_constraintStart_toStartOf="@+id/guideline_v7"
        app:layout_constraintTop_toTopOf="@+id/guideline_h14" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        android:hint="@string/studentemail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h16"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v8"
        app:layout_constraintStart_toStartOf="@+id/guideline_v7"
        app:layout_constraintTop_toTopOf="@+id/guideline_h15" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h17"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v6"
        app:layout_constraintStart_toStartOf="@+id/guideline_v7"
        app:layout_constraintTop_toTopOf="@+id/guideline_h16" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h17"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v8"
        app:layout_constraintStart_toStartOf="@+id/guideline_v6"
        app:layout_constraintTop_toTopOf="@+id/guideline_h16" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/verify"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h20"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v8"
        app:layout_constraintStart_toStartOf="@+id/guideline_v7"
        app:layout_constraintTop_toTopOf="@+id/guideline_h19" />

</android.support.constraint.ConstraintLayout>