<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17447917" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8255"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2761" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.529" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <ImageView
        android:id="@+id/imAccountActivityBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/background_light" />

    <TextView
        android:id="@+id/tvLetsGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getstarted"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v5"
        app:layout_constraintStart_toStartOf="@+id/guideline_v5"
        app:layout_constraintTop_toTopOf="@+id/guideline_h8" />

    <TextView
        android:id="@+id/tvAreYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounttype"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v5"
        app:layout_constraintStart_toStartOf="@+id/guideline_v5"
        app:layout_constraintTop_toBottomOf="@+id/tvLetsGetStarted" />

    <Button
        android:id="@+id/btIsStudent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="#da2f5a"
        android:text="@string/student"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h10"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vA"
        app:layout_constraintTop_toTopOf="@+id/guideline_h9" />

    <Button
        android:id="@+id/btIsLandlord"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="#da2f5a"
        android:text="@string/landlord"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h10"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vB"
        app:layout_constraintStart_toStartOf="@+id/guideline_v5"
        app:layout_constraintTop_toTopOf="@+id/guideline_h9" />

</android.support.constraint.ConstraintLayout>