<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">




    <android.support.constraint.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1432" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8594" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1745" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8255" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2354" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4389" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5274" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6159" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6867" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7752" />

    <ImageView
        android:id="@+id/imLoginBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#da2f5a"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h7"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toTopOf="@+id/guideline_h6"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="#FFFFFF"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h3" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="#FFFFFF"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h4" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/account"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toTopOf="@+id/guideline_h7" />

    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v4"
        app:layout_constraintStart_toStartOf="@+id/guideline_v4"
        app:layout_constraintTop_toTopOf="@+id/guideline_h10" />

</android.support.constraint.ConstraintLayout>